--- a/index.html
+++ b/index.html
@@ -4,9 +4,44 @@
    <meta charset="UTF-8">
    <meta name="viewport" content="width=device-width, initial-scale=1.0">
    <title>#100DaysOfCode</title>
+   <link rel="stylesheet" href="style.css">
 </head>
 <body>
-   <h1>#100DaysOfCode</h1>
-   <p>just tesing, How git works</p>
+   <div class="container">
+      <div class="cal-main">
+        0 
+      </div>
+      <div class="cal-main">
+         <div class="cal-button-row" >
+            <button class="cal-button">c</button>
+            <button class="cal-button">@</button>
+            <button class="cal-button">+</button>  
+         </div>
+         <div class="cal-button-row">
+            <button class="cal-button">7</button>
+            <button class="cal-button">8</button>
+            <button class="cal-button">9</button>
+            <button class="cal-button">1</button>         
+         </div>
+         <div class="cal-button-row">
+            <button class="cal-button">4</button>
+            <button class="cal-button">5</button>
+            <button class="cal-button">6</button>
+            <button class="cal-button">1</button> 
+         </div>
+         <div class="cal-button-row">
+            <button class="cal-button">1</button>
+            <button class="cal-button">2</button>
+            <button class="cal-button">3</button>
+            <button class="cal-button">1</button> 
+         </div>
+         <div class="cal-button-row">
+            <button class="cal-button">1</button>
+            <button class="call-button">1</button>
+            <button class="cal-button">1</button>
+            <button class="cal-button">1</button>  
+         </div>
+      </div>
+   </div>
 </body>
 </html>
