--- a/index.html
+++ b/index.html
@@ -14,32 +14,32 @@
       <div class="cal-main">
          <div class="cal-button-row" >
             <button class="cal-button">c</button>
-            <button class="cal-button">@</button>
-            <button class="cal-button">+</button>  
+            <button class="cal-button">&#8592;</button>
+            <button class="cal-button">&divide;</button>  
          </div>
          <div class="cal-button-row">
             <button class="cal-button">7</button>
             <button class="cal-button">8</button>
             <button class="cal-button">9</button>
-            <button class="cal-button">1</button>         
+            <button class="cal-button">&times;</button>         
          </div>
          <div class="cal-button-row">
             <button class="cal-button">4</button>
             <button class="cal-button">5</button>
             <button class="cal-button">6</button>
-            <button class="cal-button">1</button> 
+            <button class="cal-button">&minus;</button> 
          </div>
          <div class="cal-button-row">
             <button class="cal-button">1</button>
             <button class="cal-button">2</button>
             <button class="cal-button">3</button>
-            <button class="cal-button">1</button> 
+            <button class="cal-button">&plus;</button> 
          </div>
          <div class="cal-button-row">
-            <button class="cal-button">1</button>
-            <button class="call-button">1</button>
-            <button class="cal-button">1</button>
-            <button class="cal-button">1</button>  
+            <button class="cal-button">*</button>
+            <button class="cal-button">0</button>
+            <button class="cal-button">#</button>            
+            <button class="cal-button">&equals;</button>  
          </div>
       </div>
    </div>
