--- a/index.html
+++ b/index.html
@@ -8,10 +8,10 @@
 </head>
 <body>
    <div class="container">
-      <div class="cal-main">
+      <div class="cal-main display">
         0 
       </div>
-      <div class="cal-main">
+      <div class="cal-main button">
          <div class="cal-button-row" >
             <button class="cal-button">c</button>
             <button class="cal-button">&#8592;</button>
