--- a/index.html
+++ b/index.html
@@ -11,11 +11,11 @@
       <div class="cal-main display">
         0 
       </div>
-      <div class="cal-main button">
+      <div class="cal-button-main">
          <div class="cal-button-row" >
-            <button class="cal-button">c</button>
-            <button class="cal-button">&#8592;</button>
-            <button class="cal-button">&divide;</button>  
+            <button class="cal-button top">c</button>
+            <button class="cal-button top">&#8592;</button>
+            <button class="cal-button ">&divide;</button>  
          </div>
          <div class="cal-button-row">
             <button class="cal-button">7</button>
