--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
    <meta name="viewport" content="width=device-width, initial-scale=1.0">
    <title>#100DaysOfCode</title>
    <link rel="stylesheet" href="style.css">
+   <script>
 </head>
 <body>
    <div class="container">
